<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">KLN_UI</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="chk1">Python</string>
    <string name="chk2">Java</string>
    <string name="tv1">Languages Knwon</string>
    <string name="tv2">Gender</string>
    <string name="rb1">Male</string>
    <string name="rb2">Female</string>
    <string name="tv3">Dept</string>
    <string-array android:id="@+id/stringarray1" android:layout_width="wrap_content" android:layout_height="wrap_content" name="spnr_array">
        <item android:layout_height="wrap_content" android:id="@+id/item1" android:layout_width="wrap_content">IT</item>
        <item android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/item2">CSE</item>
    </string-array>
 
    </resources>
