<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AbsoluteLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kln_ui.MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="79dp"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="18dp"
        android:text="@string/tv1" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="95dp"
        android:layout_y="26dp"
        android:text="@string/chk1" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="199dp"
        android:layout_y="25dp"
        android:text="@string/chk2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="4dp"
        android:layout_y="88dp"
        android:text="@string/tv2" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="98dp"
        android:layout_y="74dp" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rb1" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb2" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:layout_x="-1dp"
        android:layout_y="156dp"
        android:text="@string/tv3" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_x="84dp"
        android:layout_y="153dp"
        android:entries="@array/spnr_array" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="108dp"
        android:layout_y="383dp"
        android:text="Button" />

    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="11dp"
        android:layout_y="223dp"
        android:stepSize="0.5"
        android:rating="2" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="39dp"
        android:layout_y="304dp" 
        android:progress="50"/>

</AbsoluteLayout>
